[project]
name = "public-benchmarks-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.53.0",
    "openai>=1.82.1",
    "ruff>=0.11.11",
    "tqdm>=4.66.0",
    "runloop-api-client>=0.40.0",
    "datasets>=3.6.0",
]
