[project]
name = "rl-sweagent"
version = "0.1.0"
description = "A package for running public benchmarks using the Runloop API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.53.0",
    "openai>=1.82.1",
    "ruff>=0.11.11",
    "tqdm>=4.66.0",
    "runloop-api-client>=0.43.0",
    "datasets>=3.6.0",
    "pyright>=1.1.402",
]

[project.scripts]
rl-sweagent = "rl_sweagent.run_public_benchmark:main"
rl-list-benchmarks = "rl_sweagent.list_benchmarks:main"
rl-create-benchmark = "rl_sweagent.create_custom_benchmark:main"
rl-shutdown-devboxes = "rl_sweagent.shutdown_running_devboxes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
